objects/Guardant_360_Sample__c.object
<CustomObject>
    <fields>
        <fullName>Secondary_PayorID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Secondary Ins Co Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must choose Payor Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guardant Samples (Secondary PayorID)</relationshipLabel>
        <relationshipName>Secondary_PayorID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <formula>1
/*
CASE(TEXT(mypicklistfield__c),
&quot;New York&quot;,4000,
&quot;CA&quot;,2000,
0)

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sent_Fax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent Fax</label>
        <referenceTo>efaxapp__Sent_Fax__c</referenceTo>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <description>Ship to values sent to SFDC for ERP integration, business logic controlled in LIMS based on Billing Rules.</description>
        <label>Ship To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Agreement_Date__c</fullName>
        <label>Signed Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_PBA_on_File__c</fullName>
        <formula>IF(ISPICKVAL(Patient__r.Patient_Benefits_Authorization__c,&apos;Signed&apos;), TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Do we have a signed PBA for this patient on file from old samples?</inlineHelpText>
        <label>Signed PBA on File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <description>Sold to values sent to SFDC for ERP integration, business logic controlled in LIMS based on Billing Rules.</description>
        <label>Sold To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stale_Sample_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:08/07/18 This check is used in the process builder to check for the Stale sample customer</description>
        <label>First Sample from Stale Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stale_Tester_1st_Sample_Task_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS: 08/12/18 This check box is used in the Process Builder - 1st time tester task creation.</description>
        <label>Stale Tester 1st Sample Task Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stale_Tester_1st_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to mark the first sample from a Stale tester (over 365 days).</inlineHelpText>
        <label>Stale Tester 1st Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stale_Tester_MA_Comments__c</fullName>
        <description>NS:08/14/18 This field is used to track the Stale Tester alert process</description>
        <label>Stale Tester MA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stale_Tester_Result_assigned_to_MA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:08/14/18 This field is used to keep track of Stale Tester alert process.</description>
        <label>Stale Tester Result assigned to MA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stale_Tester_Task_Assigned_To__c</fullName>
        <description>NS:08/14/18 This field is used to track the Stale Tester alert process</description>
        <label>Stale Tester Task Assigned To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROCESSED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRF_ICD_1_CType__c</fullName>
        <formula>Primary_ICD_Code_Lookup__r.Cancer_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRF ICD 1 CType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRF_ICD_2_CType__c</fullName>
        <formula>Secondary_ICD_Code_Lookup__r.Cancer_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRF ICD 2 CType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRF_Signed__c</fullName>
        <description>Checked if PBA on this sample is signed. Hidden field used for reports</description>
        <formula>ISPICKVAL(Pt_Benefits_Authorization__c, &quot;Signed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRF Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Status__c</fullName>
        <label>TX Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Assigned_To__c</fullName>
        <description>NS:07/16/18: This field is used in the the report First Time Test Tracker.</description>
        <label>Task Assigned To</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Count__c</fullName>
        <description>Rank order of sample by the same physician. Updated via &apos;SampleUpdateTrigger&apos;. See ENT-10645, ENT-8579</description>
        <inlineHelpText>This field indicates how many samples (across all request types) were ordered by this physician  **when this sample was ordered.**  This field rolls up the physician’s test count by NPI number if available.</inlineHelpText>
        <label>Physician Test Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_SFDC__c</fullName>
        <label>Test SFDC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tetreault_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tetreault Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Promotion_Code__c</fullName>
        <formula>Contact__r.Total_Promo_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Promotion Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Notes__c</fullName>
        <label>Treatment Notes</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <inlineHelpText>Name of trial, if sample is associated with one</inlineHelpText>
        <label>Trial Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <description>Derived from LIMS Project ID. Hidden from most users. Used for reporting</description>
        <formula>CASE(LIMS_Project_ID__c, 
  &apos;RHI_04&apos;,&quot;RADIUS&quot;, 
  &apos;RHI_05&apos;,&quot;RADIUS&quot;, 
  &apos;RHI_03&apos;,&quot;RADIUS&quot;, 
  &apos;RHI_E1&apos;,&quot;RADIUS&quot;, 
  &apos;RAD_01&apos;, &quot;RADIANCE&quot;,
  &apos;VIS_01&apos;, &quot;VISION&quot;,
  &apos;MIR_516&apos;, &quot;Mirati 516&quot;,
  &apos;JNS_01&apos;, &quot;JNJ-61186372&quot;,
  &apos;MIR_01&apos;, &quot;Mirati 265&quot;,
  &apos;BLU_04&apos;, &quot;Blueprint&quot;,
  &apos;OCT_1P&apos;, &quot;Octimet 1P&quot;,
  &apos;SRA_01&apos;, &quot;Sierra Oncology SOW 1&quot;,
  &apos;AZN_26-Omni&apos;, &quot;HUDSON&quot;,
  &apos;AZN_26-G360&apos;, &quot;HUDSON&quot;,
  &apos;AZN_33&apos;, &quot;HUDSON&quot;,
  &apos;LOX_04&apos;, &apos;Loxo&apos;,
  &apos;PFE_14&apos;, &apos;PACE&apos;,
  &apos;PRN_1C&apos;, &apos;Principia&apos;, 
  &apos;AZN_16&apos;, &apos;Radiance&apos;,
  &apos;JNS_09&apos;, &apos;JNS_09&apos;,
  &apos;RGR_01&apos;, &apos;RAGNAR&apos;,
  &apos;GAP_01&apos;, &apos;GAP&apos;,
  &apos;GAP_02&apos;, &apos;GAP&apos;,
  &apos;GAP_03&apos;, &apos;GAP&apos;,
  &apos;GAP_04&apos;, &apos;GAP&apos;,
  &apos;GAP_05&apos;, &apos;GAP&apos;,
  &apos;GAP_06&apos;, &apos;GAP&apos;,
  &apos;GAP_07&apos;, &apos;GAP&apos;,
  &apos;GAP_08&apos;, &apos;GAP&apos;,
  &apos;GAP_09&apos;, &apos;GAP&apos;,
  &apos;GAP_10&apos;, &apos;GAP&apos;,
  &apos;GAP_11&apos;, &apos;GAP&apos;,
  &apos;GAP_12&apos;, &apos;GAP&apos;,
  &apos;BSL_01&apos;, &apos;Basilea&apos;,
  &apos;AMG_01&apos;, &apos;Amgen&apos;, 
  &apos;JNJ_12&apos;, &apos;Janssen SOW 12&apos;,
  &quot;Other Pharma&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UE_Sample_Workflow__c</fullName>
        <inlineHelpText>NONE is used for samples received prior to 2/2/2016.</inlineHelpText>
        <label>UE Sample Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UE Basic</fullName>
                </value>
                <value>
                    <fullName>UE VUS</fullName>
                </value>
                <value>
                    <fullName>UE Low MAF</fullName>
                </value>
                <value>
                    <fullName>UE No Alt</fullName>
                </value>
                <value>
                    <fullName>UE Lung 1</fullName>
                </value>
                <value>
                    <fullName>UE Lung 2</fullName>
                </value>
                <value>
                    <fullName>UE CRC</fullName>
                </value>
                <value>
                    <fullName>UE 1st Sample Received</fullName>
                </value>
                <value>
                    <fullName>UE 1st Sample Reported</fullName>
                </value>
                <value>
                    <fullName>UE 1st F/U</fullName>
                </value>
                <value>
                    <fullName>UE 2nd F/U</fullName>
                </value>
                <value>
                    <fullName>UE Int&apos;l Report</fullName>
                </value>
                <value>
                    <fullName>UE NCCN Reported</fullName>
                </value>
                <value>
                    <fullName>UE NCI Reported</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Region__c</fullName>
        <formula>TEXT(Sample_Owner__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from &apos;Region&apos; field on Sample Owner.</inlineHelpText>
        <label>Sample Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Territory__c</fullName>
        <formula>Account__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from current Account Territory.</inlineHelpText>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unreported_Sample_Alert_Date__c</fullName>
        <formula>IF(
AND(ISPICKVAL(Request_Type__c,&apos;Pharma&apos;),
LIMS_Project_ID__c &lt;&gt;&apos;G360_NY_2_10&apos;),  
Date_Received__c + 15,
Date_Received__c + 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If sample is unreported as of this date, then a process creates a delayed sample case. This date is 10 days after the Date Received for Clinical samples, 15 days after for Pharma samples.</inlineHelpText>
        <label>Unreported Sample Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VUS_Email_Sent_to_Physician__c</fullName>
        <description>Used to identify when the VUS email was sent to physician.</description>
        <label>VUS Email Sent to Physician</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VUS_Picklist__c</fullName>
        <inlineHelpText>N/A =  No Alteration found or Alteration was found and the sample was NOT submitted to N of 1.</inlineHelpText>
        <label>VUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xVUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>West__c</fullName>
        <description>Hidden field. Used to determine if a sample is either NCCN West or NCI West.</description>
        <formula>IF (
   OR(
   (NCCN_West__c=TRUE),
   (ISPICKVAL(Account__r.NCI_Region__c,&quot;West&quot;)),
   (ISPICKVAL(Account__r.NCCN_Region__c,&quot;West&quot;))), &quot;West&quot;, &quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>West</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Result_Assigned_to_MA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Result Assigned to MA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Result_MA_Comments__c</fullName>
        <label>1st Result MA Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Test_Delivered_email_sent__c</fullName>
        <description>Used to identify when the 1st Test Delivered email was sent to physician.</description>
        <label>1st Test Delivered Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Time_Receiving_Email__c</fullName>
        <description>Used to identify the email that was sent from the workflow &quot;First Time Receiving&quot;.</description>
        <label>1st Time Receiving Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Time_Tester_Task_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check when task is sent to MSL, prevents more tasks from being sent when record is updated.</description>
        <label>1st Time Tester Task Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Time_Receiving_Email_Sent__c</fullName>
        <description>Used to identify when the 1st Follow Up Email was sent to physician.</description>
        <inlineHelpText>Used to identify when the 1st Follow Up Email was sent to physician.</inlineHelpText>
        <label>1st Follow Up Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Time_Receiving_email_sent__c</fullName>
        <description>Used to identify when the 2nd Follow Up Email was sent to physician.</description>
        <inlineHelpText>Used to identify when the 2nd Follow Up Email was sent to physician.</inlineHelpText>
        <label>2nd Follow Up Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Xifin_Bill_Date__c</fullName>
        <label>Xifin Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_10__c</fullName>
        <label>Xifin ICD 10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_1__c</fullName>
        <label>Xifin ICD 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_2__c</fullName>
        <label>Xifin ICD 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_CType_10__c</fullName>
        <label>Xifin ICD CType 10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_CType_1__c</fullName>
        <label>Xifin ICD CType 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xifin_ICD_CType_2__c</fullName>
        <label>Xifin ICD CType 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Received__c</fullName>
        <formula>Year(Date_Received__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>u_billtotype__c</fullName>
        <label>Bill To Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>u_shiptotype__c</fullName>
        <label>Ship To Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>u_soldtotype__c</fullName>
        <label>Sold To Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to update records.</description>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Guardant Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Cancer_Type__c</columns>
        <columns>Alteration__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CORE_Samples</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 6) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>CORE__c</columns>
        <columns>Elite_Sample__c</columns>
        <columns>Cancer_Class__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Account_AE__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cancer_Class__c</field>
            <operation>equals</operation>
            <value>Lung</value>
        </filters>
        <filters>
            <field>Cancer_Class__c</field>
            <operation>equals</operation>
            <value>Breast</value>
        </filters>
        <filters>
            <field>Cancer_Class__c</field>
            <operation>equals</operation>
            <value>GI</value>
        </filters>
        <filters>
            <field>Cancer_Class__c</field>
            <operation>equals</operation>
            <value>CRC</value>
        </filters>
        <filters>
            <field>Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>NILE</value>
        </filters>
        <label>CORE Samples</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>No_Alt_Email_Sent__c</columns>
        <columns>Alteration__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Cancellation_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CANCELLED</value>
        </filters>
        <filters>
            <field>Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/14/2019</value>
        </filters>
        <filters>
            <field>Cancellation_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <label>Cancelled</label>
        <language>en_US</language>
        <sharedTo>
            <role>Client_Services_Associate</role>
            <role>Founder_CEO</role>
            <role>Manager_Client_Services</role>
            <role>Senior_Financial_Analyst</role>
            <role>Sr_Vice_President_Sales</role>
            <role>VP_Finance1</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Samples</fullName>
        <columns>NAME</columns>
        <columns>Cancellation_Reason__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CANCELLED</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/10/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Not Applicable</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>GHSQA</value>
        </filters>
        <label>Cancelled Samples</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Do_Not_Bill</fullName>
        <columns>NAME</columns>
        <columns>Patient__c</columns>
        <columns>LIMS_Patient_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/18/2017</value>
        </filters>
        <filters>
            <field>Promotion_Code__c</field>
            <operation>equals</operation>
            <value>CH1</value>
        </filters>
        <label>CH1 Promo Code</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>System_Administrator</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Empty_Patient_Test_Counts</fullName>
        <columns>Final_Report_Date__c</columns>
        <columns>NAME</columns>
        <columns>Patient_Test_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Patient_Test_Count__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_Report_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Empty Patient Test Counts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Empty_Physician_Test_Counts</fullName>
        <columns>Final_Report_Date__c</columns>
        <columns>NAME</columns>
        <columns>Test_Count__c</columns>
        <columns>Patient_Test_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Count__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_Report_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Empty Physician Test Counts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IOE_ready_Samples</fullName>
        <columns>NAME</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Do_not_contact__c</columns>
        <columns>MR_Match_Key__c</columns>
        <columns>MR_Match_Record_Update__c</columns>
        <columns>MR_Patient_Initials__c</columns>
        <columns>Qualifies_for_Outreach_Email_Auto_send__c</columns>
        <columns>Outreach_Email_Auto_sent__c</columns>
        <columns>Run_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MR_Match_Record_Update__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/11/2020 12:00 AM</value>
        </filters>
        <label>IOE-ready Samples</label>
        <sharedTo>
            <group>User_Engagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LIMS_Project_IDs</fullName>
        <columns>NAME</columns>
        <columns>Date_Received__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <columns>LIMS_Project_ID_lookup__c</columns>
        <columns>SOW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LIMS_Project_ID__c</field>
            <operation>startsWith</operation>
            <value>PGS</value>
        </filters>
        <label>LIMS Project IDs</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LUNAR</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Bio_Banked_Account__c</columns>
        <columns>u_billtotype__c</columns>
        <columns>LIMS_Project_ID__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Test_Type__c</columns>
        <columns>Trial__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Sample_Aging__c</columns>
        <columns>Create_Delayed_Sample_Case__c</columns>
        <columns>Delayed_Sample_Case_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Type__c</field>
            <operation>startsWith</operation>
            <value>LUNAR</value>
        </filters>
        <filters>
            <field>Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2019</value>
        </filters>
        <label>LUNAR</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
            <roleAndSubordinates>Manager_Client_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Med_Affairs</fullName>
        <columns>Contact__c</columns>
        <columns>Pt_First_Name__c</columns>
        <columns>Pt_Last_Name__c</columns>
        <columns>Pt_DOB__c</columns>
        <columns>NAME</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Cancer_Type__c</columns>
        <columns>Alteration__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>contains</operation>
            <value>cabanillas</value>
        </filters>
        <label>Med Affairs</label>
        <sharedTo>
            <group>Med_Affairs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Modified_recently</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Cancellation_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/10/2020 10:00 AM</value>
        </filters>
        <filters>
            <field>Alteration__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Modified recently</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Guardant_Samples</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Cancer_Class__c</columns>
        <columns>Alteration__c</columns>
        <columns>Off_Label__c</columns>
        <columns>On_Label__c</columns>
        <columns>Clinical_Trial__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Guardant Samples</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Samples_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Cancer_Class__c</columns>
        <columns>Alteration__c</columns>
        <columns>Clinical_Trial__c</columns>
        <columns>On_Label__c</columns>
        <columns>Off_Label__c</columns>
        <columns>Test_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>Account_MSL__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Samples This Year</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Regional_Sales_Director_Central</roleAndSubordinates>
            <roleAndSubordinates>Regional_Sales_Director_Northeast</roleAndSubordinates>
            <roleAndSubordinates>Regional_Sales_Director_Southeast</roleAndSubordinates>
            <roleAndSubordinates>Regional_Sales_Director_West</roleAndSubordinates>
            <roleAndSubordinates>Sr_Vice_President_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NCCN_NCI_Samples</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Date_Received__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>NCI_Sample__c</columns>
        <columns>NCCN_Sample__c</columns>
        <columns>NCCN_West__c</columns>
        <columns>NCCN_East__c</columns>
        <columns>UE_Sample_Workflow__c</columns>
        <columns>NCCN_Sample_Reported_Email_Sent__c</columns>
        <columns>NCI_Email_Sent__c</columns>
        <columns>Test_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Report_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/24/2018</value>
        </filters>
        <filters>
            <field>NCI_Sample__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NCCN_Sample__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NCCN/NCI Samples</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Accession #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guardant Samples</pluralLabel>
    <recordTypes>
        <fullName>Guardant_360</fullName>
        <active>true</active>
        <label>Guardant 360</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Accession_Field_if_Sample_Cancelled</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
   NOT(ISBLANK(Cancellation_Reason__c)),
   ISCHANGED(Alteration__c)
)</errorConditionFormula>
        <errorDisplayField>Alteration__c</errorDisplayField>
        <errorMessage>Cannot change alteration field if Cancellation Reason is populated.</errorMessage>
    </validationRules>
</CustomObject>